[project]
name = "research3"
version = "0.1.0"
description = "Research3"
requires-python = "==3.12.5"

dependencies = [
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.7",
    "nixl>=0.8.0",
    "seaborn>=0.13.2",
    "vllm",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.uv.sources]
vllm = { path = "vllm", editable = true }
